# c2ba

./: .gitmodules  CMakeLists.txt  README.md
library-template/: CMakeLists.txt
library-template/lib/cmake/: info.hpp.in
library-template/tests/: main.cpp
